-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 13, 14
-
Component/s: hotspot
-
b09
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8231760 | 13.0.2 | Roman Kennke | P4 | Resolved | Fixed | b02 |
Testing in jdk11 shows we are missing (at least) Op_CMoveN in ShenandoahLoadReferenceBarrier::needs_barrier_impl().
- backported by
-
JDK-8231760 Shenandoah: Missing node types in ShenandoahLoadReferenceBarrier::needs_barrier_impl()
-
- Resolved
-